// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.Phone /> Snapshots should match with default input 1`] = `
.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover:not(:disabled),
.c1:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-family: Rubik;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

.c2 {
  --fieldset-left-offset: 12px;
  --dropdown-zIndex: 1;
  height: inherit;
}

.c2 .react-tel-input {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  height: inherit;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  display: grid;
  grid-template-areas: 'dropdown input';
  grid-template-columns: min-content 1fr;
}

.c2 .react-tel-input .special-label {
  position: absolute;
  top: -8px;
  display: block;
  background: white;
  padding: 0 4px;
  white-space: nowrap;
  font-size: 12px;
  color: #6B6B78;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 .react-tel-input:focus-within .special-label {
  color: #231B22;
}

.c2 .react-tel-input input[disabled] + .flag-dropdown:hover {
  cursor: not-allowed;
}

.c2 .react-tel-input .form-control {
  background: transparent;
  border: none;
  width: 100%;
  outline: none;
  grid-area: input;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  padding-left: 12px;
}

.c2 .react-tel-input .form-control:disabled {
  cursor: not-allowed;
}

.c2 .react-tel-input .form-control::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control::-moz-placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control:-ms-input-placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control::placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control:hover,
.c2 .react-tel-input .form-control:focus {
  box-shadow: none;
}

.c2 .react-tel-input .form-control.open {
  z-index: calc(var(--dropdown-zIndex) + 1);
}

.c2 .react-tel-input .flag-dropdown {
  border: none;
  width: inherit;
  height: inherit;
  grid-area: dropdown;
}

.c2 .react-tel-input .flag-dropdown.open {
  width: 100%;
  z-index: var(--dropdown-zIndex);
}

.c2 .react-tel-input .flag-dropdown.open,
.c2 .react-tel-input .flag-dropdown.open .selected-flag,
.c2 .react-tel-input .flag-dropdown:hover,
.c2 .react-tel-input .flag-dropdown:focus {
  cursor: pointer;
  background: transparent;
}

.c2 .react-tel-input .selected-flag {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 52px;
  height: 100%;
  padding: 0;
  padding-left: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
}

.c2 .react-tel-input .selected-flag::after {
  content: '';
  position: absolute;
  background-color: #D7D7E0;
  height: 28px;
  right: -4px;
  width: 1px;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c2 .react-tel-input .selected-flag .flag {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .react-tel-input .selected-flag .flag .arrow {
  background-color: #6B6B78;
  -webkit-mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M3.146%204.146a.5.5%200%200%201%20.708%200L6%206.293l2.146-2.147a.5.5%200%200%201%20.708.708l-2.5%202.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%200%201%200-.708Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M3.146%204.146a.5.5%200%200%201%20.708%200L6%206.293l2.146-2.147a.5.5%200%200%201%20.708.708l-2.5%202.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%200%201%200-.708Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  width: 16px;
  height: 16px;
  -webkit-transition: 0.6s,color 0.1s;
  transition: 0.6s,color 0.1s;
  position: relative;
  left: 28px;
}

.c2 .react-tel-input .selected-flag .flag .arrow.up {
  border: none;
  -webkit-transform: rotateX(180deg);
  -ms-transform: rotateX(180deg);
  transform: rotateX(180deg);
}

.c2 .react-tel-input .selected-flag .flag .arrow:hover,
.c2 .react-tel-input .selected-flag .flag .arrow:focus {
  border: none;
  background-color: #231B22;
}

.c2 .react-tel-input .flag {
  width: 20px;
  height: 20px;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAABacSURBVHgB1VsJWFNnuv5ycgIkLDkg+3oQN5QRrRaXqmDV2tYF1LHWtlaotcvolDidrvfpJNw+vZ2285Sm2t470/aCjnWpY4G6ay0go4IbQRFxgYRd9pCNhCznnv/ERCAnkAC9z8z7POfhnH95+c+X7/u39/wcYIFcLicwS296ncojubLdY4amj0ui9FAfk4LwsMhmBOsLoifE54KLsPFVa5uSS7tvz1AaNQwfKQhRBPJ8ZQv9p42Iz9ODn+zB58/AMGv7TMY+hdlslhl02hHxdemw5JCGuhm6UxcYPq9lcxVdEybKCNzolI/jQHavKu3nOt+cf9bzicp2T9Z/GOxtgtUTtYoV49VZwzUU8R1sKcnJby0laOOxlon0CoSt0U8oMiKWuMR3o+NCjhkzEWmPvspaxnTmFVB7RCk0ketda98ldU5+uYZ47alJsOJcPnRKdjF54yTb4aspT8C3P8th6yJCkTFf6MCH9384c1meLSnxFTkznA1tWhy+lQnJ0iavnBNl8pin5sRmsZUrqDievVH2mciZ4Wxo1HeA+M4+8kT71ZxD5QUx62emsvKVXj+efejWTlGD6i5MCE50yof33gf/2n+Q/NbinNar+2NCZm1k5bvfXJct2tskOlDaxTy/5qx9XSYQ53eQJ25ocw6dKY9Zv2ymnQ+z3dCGEH9+iRjWeP2Byn55hZCcuVyTPTjvYHmBeNv1/2E1Xoq/CjaHtzmko7I7Kr+TFFQcdeA7X3FEfPROLmM8V+HVfQ0CKj+U3C8/7MAn339Y7Ke1iPa/NQ/EGya6xDcnPhSStD0S+eECOx9jQPm9W+kHqnwlyLPcBaqzt1IoQqFgbxzNl12TL0GeNRjZk+Twy6xKyJl6D8TjGxzyUZ2P7x524Dtff1zSY+gCd4H3toDwztcOfJBfLKmf+CR0Zu0CyTOTQP7fj0NMEJ+Vg/DmQd47s+H96/nQm/YqWP6WZ+djDHiy1lfsjucNBqp7ts4nB3XG6HlP01nxYM8jvQxwbW4FZEa32NOQAWsXXGXy+gPV3d9yzs4naysWu+N5g4E80a/5iJ3v2HWd2Pjm78EvfQ100P1d3cw1EKHrgpSEcQ51E2OFUPpCIMx89TXo/mIP+Ge+COQBKfgJAxg+HP0aBbd7yOWxGhgVOF7MSEbzKRdefIfsn7U5rA2yJyuAwE1QdD0aiq9HWdOXVQIZ0sMYdscdEnY3B9vr/NRaRjwfvojh+04mJmGUELScJjQRqxi+s7We5L5aI2z+5AMITU4CY10TaArOgnBzmkO91ZP4oNxdCZa0JRCU/R4IUpJAqTXC5Xs9RHxAbzou8PFOzXw6yuk/thiVYOw6CxiPAF7AkiEb2dIoTylsLadsoYsMhrzM5nVZex9jLhvQvfiF88yFQnqGjw6yaiNBacIZL6zSNKR4m3TUSEJ3MJAX8jS1KdyQ6dSWZf3el/bCoYARfhBAe11/oJBePjuKeV+cy8FnOKts1CnAWLsNBJ59zLO64VPwnnqQMSZrI/mCxPY+FXOPwvKX2Tfpv3prJk4ChxBD9vt8qGvshqLLNSC71cIYMXl6A6RMr6cN3QypwZ3w+JUEUOg94ZLybuIsT28ljBFoIyYqf2mEWukPTsuYlWr7PQpZVW6e07LYjucScZzHI52W0FXYjYfgK7CArv0UCMI3sBPSE9o6XSvjccjzkAfaoLRsgNSl00Cp0kN62mzI9lsFsupmWLNtDxPSyIAItr4yqzYK0IRbDQYYK2BGFWlRmMGkaHKpvEWpYi5nwGsbyCGHXbPZBLxBaTx60jscekyOtLsPn4Udf6XszzPiwyH7vVUgP/suyErldMp5+HcEbqHMCvovyZaJ+jz1/W9ozzMzz2odBr4TnfeDJqNRQfB8IFseRBZ1+Q0I4cS4gfM+2a1mWPziX0GyfSn8Ke00XflBusYb1sqmMCH8xbQQhZfVA0kYA5gEkQrueAFwyAjSWRkUwjavQ/0fl/B1yscJD5Lhep1WBgHsDeTSfZ1g6gGw9FZAX28HeJNDDyK0x1bM8Z+M3IxEBhj/z0eYUEYXClE0WPQfRBAoJT2pNymYe2l9mDV0H3hwINenIkoQxfDBGMCM+1d4rl1Ahb2xlXRWpoOeF9qWcv6iFyFQvN0pX1tLQx1uNBmKvytUpNV26sE5Qh5c9x9cjgj2NsPaeG5+vG8EMZeYnFaqtM4DkUHq9F7wJ2RI2oBo6lJQNpt+mx7GK5FhkcFeqpoA+W0Bdj60Pl4UnJBPAUVE+U1MG808EMHEDwNDcFI+ZTIQB4vlaRuSY5n0bukeMMhu0d7my2osI91fdn+xGyw9auDTUxj5oiUgPSqHyAAevPIYlo9bwJBLUT7iU/JIAkaBLTN6FNGxkblyeTmxOnSumDagnS+3OQhQSP/vtHuQQs/7Mleftdcr6hbCSzcnMCHbH2hzITo2nuGbEjQLTaRH1T51zLN2vmXTCDFtGOJ+xnugK7rEGKZV/B5UNRohYVA9HhlBe+JmaFqzHXroETmUnva8//oWON2kpvkeycViY2cql47XZCQEjXy0Q3VXTlQzC2zEtzFyYQbthQPKIAM9fnUa45E2oJBFaYONN4+umxG9xM73m5D5GbQXwkih938ENDHr7XwqjTKj4fUPQC+rhuDs9yHvzSxI2lkLde29DnV3FzZCk8AfyPI8GCe2GpGXvRNWz+QzfJiVdGr+89N6pGibyl2gOs9M7clCv64tDfG9M/630kiWERsZ8PGrCcy1406sQz6qIxq/2oFvQfRKqdBzHLgLFLrK8S858GGvrJaaj+2GtV2TQJRT5bS+ok0Hsa8XQtbBuxBIb29F3z0JltTH7Hz23ZgnkuJE22d3Zbnjiajsjjmd0hVz4iSD89bMWiH6bGpG1mBPRCjq9mOuwUCetzNhq3TDrDWSwXnzE1eIlsc9l+WOJyLPa0/4T2nYo89LBufFrl0jkul6s/R6nUtckh/uwMa/XAQlH6RxGzdIbOkDJmzIEHL5LcWJu77iI3e9SWe7M8hwC6J1TOijX9PZP91IGwLx7ak/K/6m/jTJtjuDgAyXGjpHuSFy0ZB8C2emMnyylmJxj7mTdFZOHzATdP4LlKqoVUO3b9ksa/vO9Yi/KekhnZWbF8eH1Bk+yg3zfTPCI2MH8HGcVaKJ0ytbvVI7dBjZrrMu93w9zIqEoD5ZNNFXbAF+bmxsrMvLLMR3ofNmarOhm2zu7WT46DmjYq7/ZNkU34gR8Qn43qk4Fye5XB7Dh+a0en2vzNjXOyI+jYGX6l99m9QXXmL4BMvnK9piYmT+AotTPpydjNEICA99F9RXqwmlxto3Tns0ECaFBIBBZ1TGTnCncVa+wDYc7pUpCFD2MOkEGQ0d4+qBMz9yRHyU0Qwc3MM+OltMZuByuGAyc0bE19mpgXM9AYQqfhmsv3UG9LflIOzoptuX6JSPVRM5dVWVk3uyhSitGrgOlLycCGL6MpmMoO7pUmiU3a5pDgcP5eQfOUaUll5iLRMZGQFbt6QrMja9MCaaSOOmP0JfXJiCt2mFS3ynaU3kXLmK6KT3EZrbrCPx2el19jKciGDA1iQP/74Fpy5nz83Io3KO3qWIpfspmLN7wCX5Rkb1R2+vlmptqRM75Tt8IHvu3CS0knDpQmUP7f+7Uz6kiXx65HXq998vpaRn3qScoT5lE1UNk6k7c9dR8v2HnPIhTaTkSj01fe1P1Po3i6jqWiX12KYTzDMb2N7XHsIHj10Wb9tZI2psN8D+j0Ih/ek4+OLgLRgKXl4CwAPDJHRDiNDwmB398w7ShtiW+aaosdG1nQ/GQLSH7mh8V0Ibnkhd9+wAPpsm4s7eoKW0Evoav0QaBhG7LnUA37Gz5eJ3dspF5betUYY874OvKkBNb5Yi1MayL1spH/4APrsmIm/jSEr+tgLkeWuBDPNhQhXdF379BBC+Hk4bSe+HgdA/0FETke6UuGM8G1Cdjz/7fMw0EaqxDYyf7XHg23eyQ4KM5+tt3W9ChlNrH27dodUJ2yWY/RvwvNNk52M8cM/pVrF4dx2cvNQBeZ8sZgiQ0XYfrwHJtxWgVPcN2UjkiQ80giI0Uu35+16xs/7OFaC6++l+08Y3Wk0EeaLl4Bk737HzSvGNml54fuV4mD1tHOz45DKEB/Phi7cfhS3ii4wxw3I+HpKzq6OV4WM0kYWiChIlFl1rBaXGaixkQEWzZljj2SDw8SU0qi5Gc/g8ZR25BoQwGmiPFBPYs+vHTBMxHzlH4M8uY/he+bOCRGk/FTbA90drmXy11gSiT68MG8J2TIkm8K/eTscvVKlSUb+HkPJIKChaNJDx4QVIXxEHqclRw/aDNiAv5Hl4pRgKL1HbGtH+YSiMCqVNYK6uS2kM1Y+JJoK8EPE1jYukWrusRkLGQiFsDV90/3BWh9ObCENCT0+hutUpeLvSaNdEkPEW/+40c49Cd6i+jw1IE9F3jpmEAdSlm4nap4NhrID4wjfHM6GLPG/14ihYnBTKhDAy5IfbZ4KIvkfGjC7cMyxfd2drIl53X0/aEpAB+8PV8LUBaSIWRQuMFSilmlTqOTBWQHyHTjfC0fNW4ajw0n0mjG2wGQ+hYfGLw/OlLiTxbU0l8GrZAXAJZQC3tzrPxjOfhX91RAQJYAo5/I9ClYBLwDmEnwLGaMscI8MUlFILY8nnZZ1lkDAGQHwrU8Jh09oQcvjS84ct0dnWosCxOdNkMEYNhABhBTaZHDMNA/FF+QaNKZ9W3kBp1r1Fwljg3RcrcCw+uhibm5CGRqnRgBMZDPiiGYyGMe7reWk81R0YDUycANDRfEFjpInY2meh+UyeeBrcroPRgF6RgMfkSKsmwl21UEwbcFSaA74l1a45YMsXiIXmxlHxdXNXjqkm0r99xN6PxAGBYaNrX2erIiAwNBdHGoFcXpWBHSnJG6kX0h4MvPQVWZD1R7DxCSxX87yokXmNnjMRNFiyXcNAfNXtV/NG6oVs7ev7tiBvpF6IzUkAw5OzmPbh1kZOzZf/mCfte+PzTLR2dAcoNLiZzzhoDs01x6RBlj2ZONUJ7sDEGQdK7EkHvgsVx6TH7+7J7DG4x+esfeh9zd8fyeRo9G7xodDlLJ+ZFfeAb8B4XrP/kMQsPSB21RPRL8t9+wVpHK0vsOW31BRICMtJsaueiDyvG1slDY97mpWvpLxAcrHxpNj2ie8bS//CyoPmcEiuHLZ9TXUSIiBQjFZRLrWP1k+6O9uk9La+nc9xQ5Xe2rbkHhObvisgnXkj07BVi5TYc8uG1BxsfEJLsdjXUkg680ZkOB02W6nC5rnEZ9NENi94n7VM07ufgsHPy/X2+fmLqR+LSUsT+/ty6ZClZsfTcmiXA9+QmgiUXE+lWtpJS3M7s9zD6DkjHf8yTnzUyDQMS3UqDkqSS3VZNQzwVtDGkxmxsH8JTWQk7zukJuK5OAk8+HyCXqIx6SZjH5jNZloT0Y5Ic9DVC6Cvqo6gHvQ7WKgQMGEneCSEj4zvWhVYyioJ6sE3ffREGTjjCOAOoWGM9fuyaiJ+QiJH4CMknPUN7moixl+KcvrOXyBMN9l3drCgIPBc+ZSCv/wJlzURj78XEeRXl1nLMHM+etriqiYymvcdYMCjl89kSyuKRae3fAiuoHbdS4BvTpPEpLKf66g5dTS7d98BkTPDDQY+LR74z6yTxK1Y4/ScyLm6I8xRh0d/VEHS4Z4h+ZjpS+azktiN69nPidCajZDe/fa6WAauQD9vDqgyfy8J2bjJ8ZxIXtkp8TsXCkRX2lyfG1EV1WD65FtJ3XHHcx01x/LE2i92uWw8BFRWu+uvkppTP43JORFGE3nrywHnOmxopTWbcbRm4+XGzjkqG/DWuxJkeFuaXRP5+kaJpFnbA+6Cau0A07eO5zp6fzgssbS3g7tAdXr3/fCrayJ+tGaDj0CzQXWE/TQbZhA5eO+y2B3Pc2gk7Ylw4pxdcxB0FYm9Z9H7bLN8YGRooPfuLvxqmoiQ1my8RqHZoLp+DzQbRhNZeewrEkYJS2EZgT9tPdch7MkiuXOtn6y13dCCtrUPgn/jDd4hru9wG7jXCL1lvoMmEsEHmBMEEL9VAF6PcqFzlwqMjcN/VdZfE/FNWUoOWTg3l97/oYukpDgtIjhyjNDQmg1+qU2eOlzoVv74KXgHRkHsoo1OyyAvtNQ2pPCjdRTX/DDUCt+9x/yNmCuEBR+Q4Co8jfcANzWn1GjUdk1kuj/AyxNsJejgGY+DcK03NP2uAzQ/9w7JZ9NEvDubqSFDN5+eJ2c9GCNycgBm0FNCwnHfAXkhr/p2Ct5p0MyAIdBVWw6qptvMFRD3CAgjJjsvfONuIhZp/Wzt4IoKSNoRzVwIHj5cKMtuAG1bHzz+cRy4Ai/zvUSV0dM+/1obRXv0R0rQnH1oLJ+lfAj7cwDcnT18f4Y0ES5hYc9UKq2G2kHr5QqFNQ0ZsrDQKZ/XpSuJWINaSbJl3qu5AhfL/gEG1cNP0tD9NdlxaGhk/yCRUmlI3NxB2p7bb2ig6WIPYIHLoDzX/Y83ORYdqTZYVy0TfOn9ULpXMKtpA+Ah4Pfya8xfi8oCmB8GnvHDdw9IE8EV9SRrJvK8xYsHhi26R2lFRaxVMGUPiYETNDRVwVXZCRAERdvT/Gjvu1B2mMlzBQK6z1PKe6H0P74DHq8DRoNe88N7dPwAfRDO6yc9cv0wGDGQ90mlVkOh/s8GicSahrxSyb6wwYQeXgq2jAnjZ4PBoIWqxhswZcV2SFj7Nly7VcSkJcQns5JxIkMUFCaw83l4c4GI5cOktCDwDnZPIkUwYwEyL563At13GaxG9F3CZ76qR8I384F4kicYm8ygKxt+WwppIhZCqHDIQKFbXm412GCkp1vDmKUfNIeHyfBZQdGsmkhU5FSYN+e3tMf9A+I2/hnM9JoFhfR8Os3PLwjYQAl9Kgw867kOcmkAEOO9gOeNMSPxtOdDQFnbS/eBrhvSCMK6KN9IBeJDxttbC7B1GR9C6T7PUK0CnyXBIJjjyQwiLoHWRPSTQ51rLMjLUNja+kA0EicnsxoPwRQaUsepk1eJXj67L7v/PLDrvYeiskrVbjeYwaADT8+H68WaCQ+VK05oIPD2fprBaCLKXdloFB0NTNwAaA8QM3wHK3dm2+aBqB98Kpx+N5UZeCU6UP+oA/2t4fVrtD7ml/yN4QvemJ49YB5IUQMLZ2RYjSce9GUc5+HK1xQZAS0lP2cwmshTMfFoIs1q5v7e1t94g4GtW27XHLTmR8S60puj0hyo+cmsmggK5e/lQK+FtcOuhfujvyaiW7UCTaSdt2/zZqdeZ4N6SzrDZ9dETtTdyhvpaoSTOAW4a5ZkwR8eahjaq0V57qyD+wNtKvitSvlVNRF6IpzndDUyxAQaQT83CTTpL9B8Hz08J7J9+iJpuLf7ToNCF9vkeK7Da+MGKRYcBO4C1fH87ZoxOyfiTBPpflskRWHoLlAdZeY2x3MiqUlPiCRJT2fNDo5xlYvxPOz9V6SxaxzPdUx4cpWI//rWLORNrgKVFbzxunTiqnWSwXkjOSeCPA//8g8DznXYEL72OVHHZ/+VhbzJVaCy7V9+Jg3buFliS2PVRJBG4OsXQKKvT1mJaHFFp1GzagRsfH3HT4sNx06Qljb23RlkOI/H5il5yxa7rIlgu/LJyfvkrGXc1mxG8b5DaiJjrTmYK26mUh2dpLmzw6o5+PgouNOmyvCYiP83DWOs3/f/AElIxoEFrKNQAAAAAElFTkSuQmCC');
  background-repeat: no-repeat;
}

.c2 .react-tel-input .ar {
  background-position: 0px 0px;
}

.c2 .react-tel-input .br {
  background-position: -20px 0px;
}

.c2 .react-tel-input .cl {
  background-position: 0px -20px;
}

.c2 .react-tel-input .de {
  background-position: -20px -20px;
}

.c2 .react-tel-input .es {
  background-position: -20px -40px;
}

.c2 .react-tel-input .gb {
  background-position: -60px 0px;
}

.c2 .react-tel-input .ie {
  background-position: -40px 0px;
}

.c2 .react-tel-input .it {
  background-position: -40px -20px;
}

.c2 .react-tel-input .mx {
  background-position: 0px -40px;
}

.c2 .react-tel-input .pt {
  background-position: -40px -40px;
}

.c2 .react-tel-input .us {
  background-position: -60px -20px;
}

.c2 .react-tel-input .ca {
  background-position: -60px -40px;
}

.c2 .react-tel-input .country-list {
  background-color: white;
  position: absolute;
  padding: 0;
  outline: none;
  overflow-y: scroll;
  list-style: none;
  max-height: 18rem;
  margin: -8px 0 0 calc(-1 * var(--fieldset-left-offset) - 1px);
  width: calc(100% + var(--fieldset-left-offset) + 2px);
  z-index: var(--dropdown-zIndex);
  border: 1px solid #231B22;
  border-top: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 .react-tel-input .country-list::-webkit-scrollbar {
  display: none;
}

.c2 .react-tel-input .country-list .country {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  padding: 12px 16px 12px 16px;
  color: #231B22;
}

.c2 .react-tel-input .country-list .country .flag {
  margin-right: 16px;
}

.c2 .react-tel-input .country-list .country .country-name {
  margin-right: 4px;
}

.c2 .react-tel-input .country-list .country .dial-code {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .react-tel-input .country-list .country .dial-code::before {
  content: '(';
}

.c2 .react-tel-input .country-list .country .dial-code::after {
  content: ')';
}

.c2 .react-tel-input .country-list .country.highlight {
  background-color: transparent;
  color: #D8385E;
}

.c2 .react-tel-input .country-list .country.highlight::after {
  content: '';
  background-color: #D8385E;
  -webkit-mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M9.854%203.146a.5.5%200%200%201%200%20.708l-4.5%204.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%201%201%20.708-.708L5%207.293l4.146-4.147a.5.5%200%200%201%20.708%200Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M9.854%203.146a.5.5%200%200%201%200%20.708l-4.5%204.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%201%201%20.708-.708L5%207.293l4.146-4.147a.5.5%200%200%201%20.708%200Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  width: 16px;
  height: 16px;
}

.c2 .react-tel-input .country-list .country.focus,
.c2 .react-tel-input .country-list .country:hover {
  background-color: #F5F5FA;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label=""
      value=""
    >
      <div
        class="c2"
      >
        <div
          class=" react-tel-input "
        >
          <input
            class="form-control "
            placeholder="+55 (11) 999999999"
            type="tel"
            value="+55"
          />
          <div
            class="flag-dropdown "
          >
            <div
              aria-haspopup="listbox"
              class="selected-flag"
              role="button"
              tabindex="0"
              title="Brazil: + 55"
            >
              <div
                class="flag br"
              >
                <div
                  class="arrow"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <label
        class="c3"
      />
    </fieldset>
  </div>
</div>
`;

exports[`<Input.Phone /> Snapshots should match with disabled input 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  line-height: 16px;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-family: Rubik;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
  cursor: not-allowed;
  pointer-events: none;
}

.c6:hover svg,
.c6:focus svg {
  fill: #231B22;
}

.c6 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  fill: #F5F5FA;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        disabled=""
        value=""
      >
        <input
          aria-invalid="false"
          class="c3 c4"
          disabled=""
          type="password"
          value=""
        />
        <label
          class="c5"
          disabled=""
        />
      </fieldset>
    </div>
    <div
      class="c6"
      disabled=""
      role="button"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;

exports[`<Input.Phone /> Snapshots should match with error 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  line-height: 16px;
  color: #CA4808;
}

.c2:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2:focus::-moz-placeholder {
  color: #6B6B78;
}

.c2:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c2:focus::placeholder {
  color: #6B6B78;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 4px;
  color: #CA4808;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: currentColor;
  font-family: Rubik;
}

.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #CA4808;
}

.c1:hover:not(:disabled),
.c1:focus-within:not(:disabled) {
  border-color: #CA4808;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-family: Rubik;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      value=""
    >
      <input
        aria-invalid="true"
        class="c2"
        value=""
      />
      <label
        class="c3"
      />
    </fieldset>
    <div
      class="c4"
    >
      <span
        aria-live="polite"
        class="c5"
      >
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input.Phone /> Snapshots should match with full width 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  line-height: 16px;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-family: Rubik;
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-family: Rubik;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c8 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #231B22;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
        value=""
      >
        <input
          aria-invalid="false"
          aria-label="Label"
          class="c3 c4"
          label="Label"
          type="password"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      role="button"
      tabindex="0"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;
